--- a/scss/atoms/helpers/_utilities.scss
+++ b/scss/atoms/helpers/_utilities.scss
@@ -1,3 +1,5 @@
 $container-heights: 100px, 250px, 300px, 600px;
 $global-radius: 2px;
 $global-radius-2x: 4px;
+$global-padding: 1em;
+$global-margin: 1em;
