--- a/scss/molecules/forms/_variables.scss
+++ b/scss/molecules/forms/_variables.scss
@@ -1,3 +1,9 @@
 @import "../../atoms/globals.scss";
 
 // Widget specific settings
+
+$form-outline-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
+$form-background: $white;
+$form-border: 1px solid nth($grey-light, 2);
+$form-border-focus: 1px solid $blue;
+$form-border-radius: $global-radius;
