--- a/scss/molecules/dropdowns/_dropdowns.scss
+++ b/scss/molecules/dropdowns/_dropdowns.scss
@@ -3,32 +3,199 @@
 /*doc
 #Dropdowns
 --------------------
-We use bootstrap dropdowns for this
+Add a dropdown to any element
 
+###Icons
 ```
 <div class="dropdown">
   <a data-toggle="dropdown" href="#"><i class="fa fa-cog"></i> <b class="caret"></b></a>
-  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-    <li role="presentation">
-      <a role="menuitem" tabindex="-1" href="#"><i class="fa fa-tachometer"></i> Dashboard</a>
+  <ul class="dropdown-menu">
+    <li>
+      <a href="#"><i class="fa fa-tachometer"></i> Dashboard</a>
     </li>
-    <li role="presentation">
-          <a role="menuitem" tabindex="-1" href="#"><i class="fa fa-cog"></i> Settings</a>
+    <li>
+          <a href="#"><i class="fa fa-cog"></i> Settings</a>
     </li>
-    <li role="presentation">
-          <a role="menuitem" tabindex="-1" href="#">Link one</a>
+    <li>
+          <a href="#">Link one</a>
     </li>
-    <li role="presentation" class="divider"></li>
-    <li role="presentation">
-          <a role="menuitem" tabindex="-1" href="#">Link one</a>
+    <li class="divider"></li>
+    <li>
+          <a href="#">Link one</a>
     </li>
   </ul>
 </div>
 ```
 */
 
-.dropdown-menu {
-  border-radius: 0;
+/*doc
+
+###Buttons
+```
+<div class="dropdown">
+  <a data-toggle="dropdown" href="#" class="btn btn-primary">More <b class="caret"></b></a>
+  <ul class="dropdown-menu">
+    <li>
+      <a href="#"><i class="fa fa-tachometer"></i> Dashboard</a>
+    </li>
+    <li>
+          <a href="#"><i class="fa fa-cog"></i> Settings</a>
+    </li>
+    <li>
+          <a href="#">Link one</a>
+    </li>
+    <li class="divider"></li>
+    <li>
+          <a href="#">Link one</a>
+    </li>
+  </ul>
+</div>
+
+
+```
+*/
+
+/*doc
+## Align Right
+```
+<div class="row">
+  <div class="dropdown float-right">
+    <a data-toggle="dropdown" href="#" class="btn btn-primary">More <b class="caret"></b></a>
+    <ul class="dropdown-menu dropdown-menu-right">
+      <li>
+        <a href="#"><i class="fa fa-tachometer"></i> Dashboard</a>
+      </li>
+      <li>
+            <a href="#"><i class="fa fa-cog"></i> Settings</a>
+      </li>
+      <li>
+            <a href="#">Link one</a>
+      </li>
+      <li class="divider"></li>
+      <li>
+            <a href="#">Link one</a>
+      </li>
+    </ul>
+  </div>
+</div>
+```
+
+*/
+
+// Bootstrap Dropdowns
+
+.caret {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: 2px;
+  vertical-align: middle;
+  border-top: 4px solid;
+  border-right: 4px solid transparent;
+  border-left: 4px solid transparent;
 }
 
-
+.dropdown {
+  position: relative;
+}
+.dropdown-toggle:focus {
+  outline: 0;
+}
+.dropdown-menu {
+  border-radius: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 160px;
+  padding: 5px 0;
+  margin: 2px 0 0;
+  font-size: 14px;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, .15);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+}
+.dropdown-menu.pull-right {
+  right: 0;
+  left: auto;
+}
+.dropdown-menu .divider {
+  height: 1px;
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #e5e5e5;
+}
+.dropdown-menu > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.42857143;
+  color: #333;
+  white-space: nowrap;
+}
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+  color: #262626;
+  text-decoration: none;
+  background-color: #f5f5f5;
+}
+.dropdown-menu > .active > a,
+.dropdown-menu > .active > a:hover,
+.dropdown-menu > .active > a:focus {
+  color: #fff;
+  text-decoration: none;
+  background-color: #428bca;
+  outline: 0;
+}
+.dropdown-menu > .disabled > a,
+.dropdown-menu > .disabled > a:hover,
+.dropdown-menu > .disabled > a:focus {
+  color: #999;
+}
+.dropdown-menu > .disabled > a:hover,
+.dropdown-menu > .disabled > a:focus {
+  text-decoration: none;
+  cursor: not-allowed;
+  background-color: transparent;
+  background-image: none;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
+.open > .dropdown-menu {
+  display: block;
+}
+.open > a {
+  outline: 0;
+}
+.dropdown-menu-right {
+  right: 0;
+  left: auto;
+}
+.dropdown-menu-left {
+  right: auto;
+  left: 0;
+}
+.dropdown-header {
+  display: block;
+  padding: 3px 20px;
+  font-size: 12px;
+  line-height: 1.42857143;
+  color: #999;
+}
+.dropdown-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 990;
+}
+.pull-right > .dropdown-menu {
+  right: 0;
+  left: auto;
+}
