Correct links in panel headings

--- a/scss/molecules/panels/_panels.scss
+++ b/scss/molecules/panels/_panels.scss
@@ -134,7 +134,7 @@ Add themes according to requirement
 }
 
 
-.panel-heading {
+.panel-heading, .panel-heading a {
   margin: 0;
   padding: $global-padding / 2;
   color: $white;
